--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+	"lint": "eslint ."
   },
   "author": "Santeri Hyvärinen",
   "license": "MIT",
   "devDependencies": {
+    "eslint": "^7.13.0",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
